# y2a

./: .gitignore  LICENSE  README.md  pyproject.toml
src/y2a/: cli.py  debug.py  downloader.py  entity.py  extractor.py  generator.py  parser.py  processor.py  splitter.py  test.py  types.py  utils.py
src/y2a/template/: back.html  back.template.anki  front.html  front.template.anki  style.css
